--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,20 @@
       <scope>provided</scope>
     </dependency>
 
+	<!-- JDBC Driver -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-jdbc</artifactId>
+		<version>1.4.1.RELEASE</version>
+	</dependency>
+
+	<!-- MySQL -->
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>8.0.18</version>
+	</dependency>
+
   </dependencies>
 
   <build>
