--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.mvc.view.prefix = /WEB-INF/views/
 spring.mvc.view.suffix = .jsp
 spring.mvc.static-path-pattern=/resources/**
+
+# spring.datasource.hikari.maximum-pool-size=4
+spring.datasource.url = jdbc:mysql://localhost:3306/aroomda?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
