--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix = .jsp
 spring.mvc.static-path-pattern=/resources/**
 
 # spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.url = jdbc:mysql://localhost:3306/aroomda?serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/aroomda?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=vhql1130@@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
