--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,14 @@
 		<artifactId>mysql-connector-java</artifactId>
 		<version>8.0.18</version>
 	</dependency>
+	
+	<!-- Test -->
+	<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <scope>test</scope>
+    
+</dependency>
 
   </dependencies>
 
