--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <artifactId>spring-boot-web-application-example</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
+  	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <java.version>1.8</java.version>
   </properties>
   <parent>
@@ -82,6 +85,10 @@
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
+            <configuration>
+                <source>1.8</source>
+                <target>1.8</target>
+            </configuration>
       </plugin>
     </plugins>
   </build>
