--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,19 @@
 		<version>8.0.18</version>
 	</dependency>
 
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis</artifactId>
+		<version>3.5.3</version>
+	</dependency>
+	<dependency>
+		<groupId>org.mybatis</groupId>
+		<artifactId>mybatis-spring</artifactId>
+		<version>2.0.3</version>
+	</dependency>
+	<dependency>
+		<artifactId></artifactId>
+	</dependency>
   </dependencies>
 
   <build>
