--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.mvc.static-path-pattern=/resources/**
 # spring.datasource.hikari.maximum-pool-size=4
 spring.datasource.url = jdbc:mysql://localhost:3306/aroomda?serverTimezone=Asia/Seoul
 spring.datasource.username=root
-spring.datasource.password=vhql1130@@
+spring.datasource.password=asdasd2134
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
