--- a/pom.xml
+++ b/pom.xml
@@ -52,17 +52,9 @@
 	</dependency>
 
 	<dependency>
-		<groupId>org.mybatis</groupId>
-		<artifactId>mybatis</artifactId>
-		<version>3.5.3</version>
-	</dependency>
-	<dependency>
-		<groupId>org.mybatis</groupId>
-		<artifactId>mybatis-spring</artifactId>
-		<version>2.0.3</version>
-	</dependency>
-	<dependency>
-		<artifactId></artifactId>
+		<groupId>org.mybatis.spring.boot</groupId>
+		<artifactId>mybatis-spring-boot-starter</artifactId>
+		<version>2.0.1</version>
 	</dependency>
   </dependencies>
 
