--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.mvc.view.suffix = .jsp
 spring.mvc.static-path-pattern=/resources/**
 
 # spring.datasource.hikari.maximum-pool-size=4
-spring.datasource.url = jdbc:mysql://localhost:3306/aroomda?serverTimezone=Asia/Seoul
-spring.datasource.username=root
-spring.datasource.password=asdasd2134
+spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/heroku_0dc9068680aac82?serverTimezone=Asia/Seoul
+spring.datasource.username=b242f15a743a81
+spring.datasource.password=4523ab4b
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
