--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
     	<version>4.12</version>
     	<!--  <scope>test</scope> -->
 	</dependency>
+	
+	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt -->
+	<dependency>
+	    <groupId>io.jsonwebtoken</groupId>
+	    <artifactId>jjwt</artifactId>
+	    <version>0.7.0</version>
+	</dependency>
+	
 
 	<dependency>
 		<groupId>org.mybatis.spring.boot</groupId>
