--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.url = jdbc:mysql://us-cdbr-iron-east-05.cleardb.net:3306/herok
 spring.datasource.username=b242f15a743a81
 spring.datasource.password=4523ab4b
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+aroomda.token-secret=wo4nf82ofncf95ifn02ndl4ivn2kifi4
